Style zipcode on desktop. Fix desktop alignment on firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 
-/* ================================= 
+/* =================================
   Base Element Styles
 ==================================== */
 
@@ -29,8 +29,19 @@ fieldset {
     padding: 0;
 }
 
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='50' fill='%23808080'><polygon points='0,0 100,0 50,50'/></svg>");
+    background-position: center right 8px;
+    background-repeat: no-repeat;
+    background-size: 12px;
+    border-radius: 0;
+  }
 
-/* ================================= 
+
+/* =================================
   Base Layout Styles
 ==================================== */
 
@@ -88,7 +99,7 @@ footer {
 
 
 
-/* ================================= 
+/* =================================
   Forms
 ==================================== */
 
@@ -169,8 +180,12 @@ input::placeholder {
     width: 50%;
 }
 
+option {
+    padding: 10px;
+}
 
-/* ================================= 
+
+/* =================================
   Media Queries
 ==================================== */
 
@@ -185,13 +200,12 @@ input::placeholder {
     .contact-fields {
         flex-wrap: wrap;
         flex-direction: row;
-        align-items: flex-start;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-start;
     }
 
     .contact-fields label {
-        flex: 1 0 20%;
+        flex: 0 0 20%;
     }
 
     .contact-fields input[type=text],
@@ -204,10 +218,11 @@ input::placeholder {
 
     .contact-fields legend {
         flex: 1 0 100%;
+        display: block;
     }
 
     #zip_code {
-        /* @TODO make zip code 50% */
+        flex: 0 0 40%;
     }
 
 }
